Finalized and documented update-language-code api
